manifestsFiles/nodeAppManifestFiles/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: yashrajdighe/node_app:V1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
