manifestsFiles/nodeAppManifestFiles/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    # kubernetes.io/ingress.class: "gce" # for gke only
spec:
  ingressClassName: nginx # for nginx ingress
  rules:
    # - host: node.yashraj-devops.tech
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 3000
